incorporate notes by preetum

--- a/ref.bib
+++ b/ref.bib
@@ -59,3 +59,13 @@
   year={2011},
   publisher={SIAM}
 }
+
+@inproceedings{FastLaplacianSolver,
+  title={Improved spectral sparsification and numerical algorithms for SDD matrices},
+  author={Koutis, Ioannis and Levin, Alex and Peng, Richard},
+  booktitle={STACS'12 (29th Symposium on Theoretical Aspects of Computer Science)},
+  volume={14},
+  pages={266--277},
+  year={2012},
+  organization={LIPIcs}
+}
