notes on projection matrix

--- a/survey.tex
+++ b/survey.tex
@@ -112,10 +112,9 @@ map $Q_G : \R^n \rightarrow \R$:
 \end{align*}
 Consider a cut $S \subset V$: the $i$-th component of its
 \textit{characteristic vector} $\one_S$ is 1 if $v_i \in S$, and is 0
-otherwise. The expression $(\one_S(u) - \one_S(v))^2$ is 1 iff
-$(u, v)$ is an edge on the cut boundary of $S$, and is 0 otherwise. We
-conclude that $Q_G(\one_S)$ sums the weights of the edges on the cut
-$S$:
+otherwise. The expression $(\one_S(u) - \one_S(v))^2$ is 1 iff $(u, v)$ is
+an edge on the cut boundary of $S$, and is 0 otherwise. We conclude that
+$Q_G(\one_S)$ sums the weights of the edges on the cut $S$:
 \begin{align*}
     \cut{G}(S) = Q_G(\one_S)
 \end{align*}
@@ -260,11 +259,11 @@ s.t $\tilde{m} \in O(\epsilon^{-2}n\log n)$. $\tilde{G}$ can be found in
 $\tilde{O}(m)$ time \cite{SpielmanSrivastava} \cite{TheSurvey}.} \\
 
 The Spielman-Srivastava algorithm has two stages: (1) compute edge selection
-probabilities, and (2) sample edges. The first step calls for the solution
-of $\log m$ Laplacian systems, for which the best known time bound is $O(m
-\log m \log n \log\log n)$ \cite{FastLaplacianSolver} \cite{TheSurvey}. The
-second step can be completed in $O(\epsilon^{-2}n\log n)$ time, for a total
-runtime of $\tilde{O}(m)$.
+probabilities, and (2) sample edges. The first step requires solving $\log
+m$ Laplacian systems, for which the best known time bound is $O(m \log m
+\log n \log\log n)$ \cite{FastLaplacianSolver} \cite{TheSurvey}. The second
+step can be completed in $O(\epsilon^{-2}n\log n)$ time, for a total runtime
+of $\tilde{O}(m)$.
 
 \subsection{Preliminaries}
 
@@ -280,10 +279,10 @@ in $G$ have some fixed (possibly arbitrary) orientation. The $(m \times n)$
     \end{cases}
 \end{align*}
 The diagonal $(m \times m)$ \textit{edge weight matrix} is: $W(e, e) =
-w(e)$. The Laplacian matrix $L_G$ can be written in terms of edge weights
+w(e)$. The Laplacian matrix $L$ can be written in terms of edge weights
 and edge-vertex incidences:
 \begin{align*}
-    L_G = B^TWB
+    L = B^TWB
 \end{align*}
 To see why this is true, consider the 3-cycle (a triangle) where all edge
 weights are 1. We have:
@@ -300,7 +299,7 @@ weights are 1. We have:
         0 & 1 & -1 \\
         -1 & 0 & 1
     \end{pmatrix} \quad
-    L_G = B^TB =
+    L = B^TB =
     \begin{pmatrix}
         2 & -1 & -1 \\
         -1 & 2 & -1 \\
@@ -313,44 +312,91 @@ z)$). For other entries $B^T_jB_i$ ($i \not= j$), all non-zero terms in the
 inner product must be negative because they correspond to one of $(i, j)$ or
 $(j, i)$ (i.e $-w(i, j)$). The result is exactly the graph Laplacian.
 
-We can now verify that $L_G$ is positive semi-definite (PSD):
+We can now verify that $L$ is positive semi-definite (PSD):
 \begin{align*}
-    x^TL_Gx = x^TB^TWBx = ||W^{\frac{1}{2}}Bx||^2_2 \geq 0 \quad \forall{x
+    x^TLx = x^TB^TWBx = ||W^{1/2}Bx||^2_2 \geq 0 \quad \forall{x
     \in \R^n}
 \end{align*}
-The null space of $L_G$ is the subspace spanned by $\one$. I.e, $\ker(L_G) =
-\ker(W^{\frac{1}{2}}B) = \Span(\one)$:
+The null space of $L$ is the subspace spanned by $\one$. I.e, $\ker(L) =
+\ker(W^{1/2}B) = \Span(\one)$:
 \begin{align*}
-    x^TL_Gx = 0 &\Leftrightarrow ||W^{\frac{1}{2}}Bx||^2_2 = 0 \\
+    x^TLx = 0 &\Leftrightarrow ||W^{1/2}Bx||^2_2 = 0 \\
                 &\Leftrightarrow x(u) - x(v) = 0 \quad \text{for all edges}
 (u, v) \in E \text{ since } Q_G(x) = 0 \\
     &\Leftrightarrow x \text{ is constant}
 \end{align*}
-$L_G$ can be diagonalized using the singular value decomposition. Let
+$L$ can be diagonalized using the singular value decomposition. Let
 $\lambda_{1..n-1}$ be the non-zero eigenvalues and $u_{1..n-1}$ the
 eigenvectors:
 \begin{align*}
-    L_G = \sum_{i=1}^{n-1} \lambda_iu_iu^T_i = U\Sigma V^*
+    L = \sum_{i=1}^{n-1} \lambda_iu_iu^T_i = U\Sigma V^*
 \end{align*}
 The pseudo-inverse is given by:
 \begin{align*}
-    L^+_G = \sum_{i=1}^{n-1} \frac{1}{\lambda_i}u_iu^T_i = V\Sigma^+ U^*
+    L^+ = \sum_{i=1}^{n-1} \frac{1}{\lambda_i}u_iu^T_i = V\Sigma^+ U^*
 \end{align*}
-Fortunately, $L_GL^+_G$ behaves like the identity matrix when $\ker(L_G)$ is
+Fortunately, $LL^+$ behaves like the identity matrix when $\ker(L)$ is
 not involved (basically because $\zero$ is not invertible). When we are
-restricted to $\im(L_G) = \Span^{\bot}(\one)$, we have:
+restricted to $\im(L) = \Span^{\bot}(\one)$, we have:
 \begin{align*}
-    L_GL^+_G &= U\Sigma V^*V\Sigma^+ U^*
+    LL^+ &= U\Sigma V^*V\Sigma^+ U^*
              = U\Sigma \one \Sigma^+ U^*
              = U \one U^*
              = \one \\
-    L^+_GL_G &= V\Sigma^+ U^*U\Sigma V^*
+    L^+L &= V\Sigma^+ U^*U\Sigma V^*
              = V\Sigma^+ \one \Sigma V^*
              = V\one V^*
              = \one
 \end{align*}
 
 \subsection{The Projection matrix}
+
+In this section we define the Projection matrix $\Pi$ and prove some facts
+about it. Later, we show that $\Pi$ can be used to bound the spectral
+approximation error.  To define $\Pi$, we need the $(m \times m)$ symmetric
+\textit{resistance matrix} $R = BL^+B^T$, which has diagonal elements $R(e,
+e) = R_e$ \footnote{We explain the significance of $R$ in Section 4.}.  The
+$(m \times m)$ \textit{projection matrix} is $\Pi = W^{1/2}RW^{1/2}$. We
+list some properties of the projection matrix with proofs:
+\begin{enumerate}[1.]
+    \item $\Pi$ is a projection matrix.
+        
+        Proof: $\Pi^2 = \Pi$ can be checked mechanically. In the last step,
+        we have $\Pi^2 = W^{1/2}BL^+LL^+B^TW^{1/2} = W^{1/2}BL^+B^TW^{1/2} =
+        \Pi$, and we need the fact that $LL^+$ is the identity on
+        $\im(L^+)$.
+
+    \item The image of $\Pi$ is equal to the image of the graph Laplacian.
+        
+        Proof: First note that $\im(\Pi) \subseteq \im(L)$.
+        \begin{align*}
+            \im(\Pi) = \im(W^{1/2}BL^+B^TW^{1/2}) \subseteq \im(W^{1/2}B) =
+            \im(L)
+        \end{align*}
+        Any vector $y \in \im(W^{1/2}B)$ must satisfy $W^{1/2}Bx$ for some
+        $x \not\in \ker(L)$, which means:
+        \begin{align*}
+            \Pi y &= W^{1/2}BL^+B^TW^{1/2}W^{1/2}Bx \\
+                  &= W^{1/2}BL^+Lx \\
+                  &= W^{1/2}Bx \quad \text{since } x \not\in \ker(L) \\
+                  &= y \in \im(\Pi)
+        \end{align*}
+        So $\im(\Pi) = \im(W^{1/2}B) = \im(L)$.
+
+    \item The eigenvalues of $\Pi$ are 1 ($n-1$ copies) and 0 ($m-n+1$
+        copies).
+
+        Proof: By rank-nullity on $L$, $\dim(\ker(L)) + \dim(\im(L)) = 1 +
+        (n-1) = n$. From this we have $\dim(\im(\Pi)) = n-1$. Because $\Pi$
+        is a projection matrix all of its eigenvalues are either 1 or 0:
+        since the image of $\Pi$ has dimension $n-1$ it must have $n-1$ `1'
+        eigenvalues. The remaining $m-n+1$ eigenvalues must be `0's.
+
+    \item The diagonal elements of $\Pi$ are: $\Pi(e, e) = \sqrt{W(e,
+        e)}R_e\sqrt{W(e, e)} = w(e)R_e$. We know $\Pi$ is symmetric by
+        symmetry of $W$ and $R$, so we get $\Pi(e, e) = \Pi^2(e, e) =
+        \Pi_e^T\Pi_e = ||\Pi_e||^2_2$.
+\end{enumerate}
 
 \subsection{Linking the Laplacian and Projection matrices}
 
